# accuweather

./: Cargo.toml  Readme.md
assets/: conditions.json  daily5.json  hourly12.json
src/: lib.rs  types.rs
