[package]
name = "accuweather"
version = "0.1.0"
authors = ["Gaëtan Duchaussois <gaetan@pignouf.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.17"
serde_json = "^1.0.40"
serde = "^1.0.40"
serde_derive = "1.0.94"
mockito = "0.20.0"
