[package]
name = "accuweather"
description = "A library to fetch data from accuweather api"
version = "0.1.0"
authors = ["Gaëtan Duchaussois <gaetan@pignouf.fr>"]
edition = "2018"
repository = "https://github.com/gaetronik/accuweather"
readme = "Readme.md"
keywords = ["accuweather", "weather", "meteo"]
license = "WTFPL"

[badges]
travis-ci = { repository = "gaetronik/accuweather", branch = "master" }

[dependencies]
reqwest = "^0.9.17"
serde_json = "^1.0.40"
serde = "^1.0.40"
serde_derive = "1.0.94"
mockito = "0.20.0"
